--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME="Laravel beadandó"
 APP_ENV=local
 APP_KEY=base64:m/a3Ov6f7MytOQjyjAdI5RxYyZqAqJMj0YXtD9bQEWo=
 APP_DEBUG=true
-APP_TIMEZONE=UTC
+APP_TIMEZONE='Europe/Budapest'
 APP_URL=http://localhost
 
 APP_LOCALE=en
